--- a/JJ.TryThingsOut.WixSetupDesigner/FirstTry/Product.wxs
+++ b/JJ.TryThingsOut.WixSetupDesigner/FirstTry/Product.wxs
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-  <Product Id="*" Name="JJ.TryThingsOut.DesignerForWixSetupProjects.FirstTry" Language="!(loc.ID)" Version="1.0.0.0" Manufacturer="Jan Joost van Zon" UpgradeCode="a5e21696-7311-49aa-bfa5-f18118d042e9">
+  <Product Id="*" Name="JJ.TryThingsOut.WixSetupDesigner.FirstTry" Language="!(loc.ID)" Version="1.0.0.0" Manufacturer="Jan Joost van Zon" UpgradeCode="a5e21696-7311-49aa-bfa5-f18118d042e9">
     <Package InstallerVersion="200" Compressed="yes" InstallScope="perMachine" Languages="0" />
     <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
     <MediaTemplate />
-    <Feature Id="ProductFeature" Title="JJ.TryThingsOut.DesignerForWixSetupProjects.FirstTry" Level="1">
+    <Feature Id="ProductFeature" Title="JJ.TryThingsOut.WixSetupDesigner.FirstTry" Level="1">
       <ComponentGroupRef Id="ProductComponents" />
     </Feature>
     <InstallUISequence>
@@ -21,7 +21,7 @@
   <Fragment>
     <Directory Id="TARGETDIR" Name="SourceDir">
       <Directory Id="ProgramFilesFolder">
-        <Directory Id="INSTALLFOLDER" Name="JJ.TryThingsOut.DesignerForWixSetupProjects.FirstTry" />
+        <Directory Id="INSTALLFOLDER" Name="JJ.TryThingsOut.WixSetupDesigner.FirstTry" />
       </Directory>
     </Directory>
   </Fragment>
